testdata/invalid/internal/domain/order/handler/http/bad_service.go
package http

// VIOLATION: handler defines exported interface (should use *app.Service)
type Service interface {
	DoSomething() error
}
